[package]
name = "ip2location"
version = "0.1.3"
authors = ["MARIRS <marirs@gmail.com>"]
description = "Find geo based on the given IP"
keywords = ["ip2location", "geoip", "geolocation", "ip"]
categories = ["database", "network-programming"]
license-file = "LICENSE"
exclude = [
    ".gitignore",
    ".travis.yml",
    "examples",
    "data"
]
repository = "https://github.com/marirs/rust-ip2location"
homepage = "https://github.com/marirs/rust-ip2location"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6.0"

[badges]
travis-ci = { repository = "marirs/rust-ip2location" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
