[package]
name = "ip2location"
version = "0.4.0"
authors = ["MARIRS <marirs@gmail.com>"]
description = "Find geo information & proxy information based on the given IP using IP2Location BIN databases"
keywords = ["ip2location", "geoip", "geolocation", "ip", "proxy"]
categories = ["database", "network-programming"]
license-file = "LICENSE"
exclude = [
    ".gitignore",
    "examples",
    "data"
]
repository = "https://github.com/marirs/rust-ip2location"
homepage = "https://github.com/marirs/rust-ip2location"
edition = "2021"

[dependencies]
memmap = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2.1.0"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
